--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -22,6 +22,10 @@ a {
   color: #999;
 }
 
+p {
+  line-height: 1.5rem;
+}
+
 @each $colorKey, $color in $colors {
   .text-#{$colorKey} {
     color: $color;
@@ -43,6 +47,14 @@ a {
   .fs-#{$sizeKey} {
     font-size: $size * $base-font-size;
   }
+}
+
+// text-overflow
+.text-ellipsis {
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 // width height
@@ -233,5 +245,13 @@ a {
     height: 2.6923rem;
     background-size: 3rem;
     top: 0;
+  }
+}
+
+
+// borders
+@each $dir in (top, right, bottom, left) {
+  .border-#{$dir} {
+    border-#{$dir}: 1px solid $border-color;
   }
 }
